# Theron

./: CMakeLists.txt  FindXS.cmake  LICENSE.txt  Theron.doxy  Theron.sln  TheronSetup.cmake  makefile
Benchmarks/ActorOverhead/: ActorOverhead.vcxproj  Main.cpp
Benchmarks/Common/: Timer.h
Benchmarks/CountingActor/: CountingActor.vcxproj  CountingActor.vcxproj.filters  Main.cpp
Benchmarks/MixedScenario/: Main.cpp  MixedScenario.vcxproj  MixedScenario.vcxproj.filters
Benchmarks/MultipleWriters/: MultipleWriters.cpp  MultipleWriters.vcxproj  MultipleWriters.vcxproj.filters
Benchmarks/ParallelThreadRing/: Main.cpp  ParallelThreadRing.cpp  ParallelThreadRing.vcxproj
Benchmarks/PingPong/: Main.cpp  PingPong.cpp  PingPong.vcxproj  PingPong.vcxproj.filters
Benchmarks/PrimeFactors/: PrimeFactors.cpp
Benchmarks/ProducerConsumer/: Main.cpp  ProducerConsumer.vcxproj
Benchmarks/ThreadRing/: Main.cpp  ThreadRing.cpp  ThreadRing.vcxproj  ThreadRing.vcxproj.filters
Docs/: ActorRef_8h.html  Actor_8h.html  Address_8h.html  Align_8h.html  Align_8h_a59f8a2596c66cc69047e1fe43998c79a.html  Align_8h_a6b92e21cf2b0c773b4a052bf6607a571.html  Align_8h_aa13ea2847e77501c84f513c5c02f6ddf.html  Align_8h_aa86be845f4b9d38ff257ea574513e814.html  Align_8h_aab2275e2ca1403d2b6ad6f4799d78638.html  Align_8h_ac85c549d2873f38d3bfa43ab7926bf45.html  Align_8h_ace9b78c6c93283250d6fa9b2b4f846d2.html  Align_8h_af2cc57ef1afc7508e07cf25adec9bd9b.html  Align_8h_afde36f5f326cb238a9c56c09bcc1bcab.html  AllocatorManager_8h.html  Assert_8h.html  Assert_8h_a19ff8762133ef5abfbd4ee6a49b9006b.html  Assert_8h_a36ddde7c1edfd77f5ef91e3228a72cb0.html  Assert_8h_a4b501a0c8dd6cf59f859e352b4615c4f.html  Assert_8h_a5b5e23ee239c67c93da43be911d2918d.html  BasicTypes_8h.html  Catcher_8h.html  Counters_8h.html  DefaultAllocator_8h.html  Defines_8h.html  Defines_8h_a0b9efe056acea27a0164457d09896e2d.html  Defines_8h_a105934ea95dec270ad05d20790c1a33e.html  Defines_8h_a266c44b69e6490887e5829719521f61d.html  Defines_8h_a2ac733010148bef3ac833900ac1d6d79.html  Defines_8h_a344bc60db4b7e996f423dde5236491fd.html  Defines_8h_a3d0395f23f4a7977fb7643f6712fd72f.html  Defines_8h_a424571c2b959ee1a5b204ce7789a77cc.html  Defines_8h_a45f62d8604cbbe0e0760ea1bf29d76a5.html  Defines_8h_a6721c493481921173d9a7deb2d0d6a29.html  Defines_8h_a6bc053c9bbe7fa27e590a4696eaa36f4.html  Defines_8h_a74fde0b5e696da6a72b89eac681e2e72.html  Defines_8h_a8873b6cd3e6debb50488f5e7ea639dd4.html  Defines_8h_a9856afae5f4e1b586b441d28eef9f3ca.html  Defines_8h_a9c09f52b721f2e9a8343c7eee5287582.html  Defines_8h_aa4d353d034038797e32df696b4f106ef.html  Defines_8h_aaed406185c3d344b7f6f37be935120a2.html  (+232 more)
Docs/search/: all_61.html  all_61.js  all_62.html  all_62.js  all_63.html  all_63.js  all_64.html  all_64.js  all_65.js  all_66.html  all_66.js  all_67.html  all_67.js  all_69.html  all_69.js  all_6d.html  all_6d.js  all_6e.js  all_6f.html  all_70.html  all_70.js  all_72.html  all_72.js  all_73.html  all_73.js  all_74.html  all_74.js  all_75.js  all_77.js  all_79.html  all_79.js  all_7e.html  classes_61.js  classes_63.js  classes_64.html  classes_64.js  classes_65.js  classes_66.html  classes_66.js  classes_69.js  (+64 more)
Include/Theron/: Actor.h  ActorRef.h  Address.h  Align.h  AllocatorManager.h  BasicTypes.h  Catcher.h  Counters.h  DefaultAllocator.h  Defines.h  EndPoint.h  Framework.h  IAllocator.h  Receiver.h  Register.h  Theron.h  YieldStrategy.h
Samples/ActorReferences/: ActorReferences.vcxproj  Main.cpp
Samples/AligningActors/: AligningActors.vcxproj  Main.cpp
Samples/AligningMessages/: AligningMessages.vcxproj  Main.cpp
Samples/Common/: LinearAllocator.h
Samples/CreatingAnActor/: CreatingAnActor.vcxproj  Main.cpp
Samples/CustomAllocator/: CustomAllocator.vcxproj  CustomAllocator.vcxproj.filters  Main.cpp
Samples/DefaultMessageHandler/: DefaultMessageHandler.vcxproj  Main.cpp
Samples/DerivedMessageTypes/: DerivedMessageTypes.vcxproj  Main.cpp
Samples/DynamicHandlerRegistration/: DynamicHandlerRegistration.vcxproj  Main.cpp
Samples/EnvelopeMessages/: EnvelopeMessages.vcxproj  Main.cpp
Samples/FallbackHandler/: FallbackHandler.vcxproj  Main.cpp
Samples/FileReader/: FileReader.vcxproj  Main.cpp
Samples/HandlingMessages/: HandlingMessages.vcxproj  Main.cpp
Samples/InitializingAnActor/: InitializingAnActor.vcxproj  Main.cpp
Samples/InitializingTheFramework/: InitializingTheFramework.vcxproj  Main.cpp
Samples/ManagingTheThreadpool/: Main.cpp  ManagingTheThreadpool.vcxproj
Samples/MeasuringThreadUtilization/: Main.cpp  MeasuringThreadUtilization.vcxproj
Samples/MultipleFrameworks/: Main.cpp  MultipleFrameworks.vcxproj
Samples/NestedActors/: Main.cpp  NestedActors.vcxproj
Samples/NonTrivialMessages/: Main.cpp  NonTrivialMessages.vcxproj
Samples/Receiver/: Main.cpp  Receiver.vcxproj
Samples/RegisteringMessages/: Main.cpp  RegisteringMessages.vcxproj
Samples/SendingMessages/: Main.cpp  SendingMessages.vcxproj
Samples/SettingTheThreadCount/: Main.cpp  SettingTheThreadCount.vcxproj
Source/: Actor.cpp  ActorCore.cpp  ActorCreator.cpp  ActorDestroyer.cpp  ActorDirectory.cpp  ActorRef.cpp  Address.cpp  Directory.cpp  Framework.cpp  MessageCache.cpp  MessageSender.cpp  Receiver.cpp  ReceiverDirectory.cpp  Theron.vcxproj  Theron.vcxproj.filters  ThreadCollection.cpp  ThreadPool.cpp  mainpage.txt
Tests/: Tests.cpp  Tests.vcxproj  Tests.vcxproj.filters
Theron/: Actor.cpp  ActorProcessor.cpp  ActorRef.cpp  ActorRegistry.cpp  AllocatorManager.cpp  BlockingScheduler.cpp  BuildDescriptor.cpp  Clock.cpp  DefaultHandlerCollection.cpp  EndPoint.cpp  FallbackHandlerCollection.cpp  Framework.cpp  HandlerCollection.cpp  MailboxProcessor.cpp  MessageSender.cpp  NonBlockingScheduler.cpp  Processor.cpp  Receiver.cpp  StringPool.cpp  Theron.vcxproj  Theron.vcxproj.filters  ThreadCollection.cpp  WorkItem.cpp  YieldPolicy.cpp
Tutorial/: Theron.doxy  Theron.sln  makefile
UnitTests/: Main.cpp  Tests.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters
cmake/: TheronSetup.cmake  theron.pc.in
(+415 files in other folders)
